<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp" android:layout_marginTop="25dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
            android:background="@android:color/transparent" android:gravity="center">
            <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:src="@drawable/hugomed" android:layout_marginRight="20dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/startmedic_med"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_consultation_title"
        android:layout_gravity="center_horizontal"
        style="@style/app_main_title"
        android:fontFamily="@font/gothamhtfbold"
        android:layout_marginTop="45dp"
        />

    <TextView
        android:id="@+id/onboarding_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/app_main_desc"
        android:text="@string/start_consultation_desc"
        android:fontFamily="@font/gothamhtfbook"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="31dp"
        />

    <Button style="@style/purple_button_large"
        android:layout_gravity="center_horizontal"
        android:text="@string/estoy"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="49dp"
        android:onClick="startConsulatation"
        />

    <Button style="@style/cancel_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancelar"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="12dp"
        android:onClick="cancel"
        />

</LinearLayout>
