<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable name="appointment" type="com.apps.client.juan.hugomed.data.entities.Appointment_Response" />
        <variable name="service" type="com.apps.client.juan.hugomed.data.entities.Service" />
    </data>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp" android:layout_marginTop="25dp" android:translationZ="1dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            app:navigationIcon="@drawable/icon_arrow"  >

            <TextView style="@style/nav_bar_purple" android:text="@string/receipt_nav_title" android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:layout_marginRight="20dp" android:layout_gravity="center"
                app:tint="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <View android:layout_width="match_parent" android:layout_height="475dp" android:background="@color/light_pink" />

        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical" android:paddingTop="108dp">
                <TextView style="@style/receipt_amount_title" android:text="@string/haz" android:layout_gravity="center_horizontal" />
                <TextView style="@style/receipt_amount" android:text='@{"$"+service.fee}' android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp" />
                <TextView style="@style/receipt_amount_sub" android:text="@string/en_hugo" android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp" />
                <androidx.cardview.widget.CardView android:layout_marginHorizontal="14dp" android:layout_width="match_parent"
                    android:layout_height="wrap_content" style="@style/receipt" android:layout_marginTop="34dp"
                    android:layout_marginBottom="-12dp"  app:cardElevation="0dp">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                        android:orientation="vertical" android:paddingHorizontal="23dp" android:paddingVertical="18dp"
                        android:paddingBottom="112dp" android:clipToPadding="false">

                        <TextView style="@style/receipt_titles" android:text="@string/nota" />

                        <TextView style="@style/receipt_key" android:text="@string/uso" android:layout_marginTop="8dp"
                            android:layout_marginBottom="23dp" />

                        <com.apps.client.juan.hugomed.helpers.ReceiptDotsView
                            android:layout_width="match_parent" android:layout_height="37dp" android:background="@android:color/transparent"
                            android:layout_marginLeft="-24dp" android:layout_marginRight="-24dp"
                            />
                        <TextView style="@style/receipt_titles" android:text="@string/detalle"  android:layout_marginTop="13dp"
                            android:layout_marginBottom="16dp" />

                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_key" android:text="@string/receipt_id" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <TextView style="@style/receipt_value" android:text="@{appointment.code}" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_key" android:text="@string/receipt_time" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <TextView style="@style/receipt_value" android:text="@{appointment.datetime}" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_key" android:text="@string/receipt_service" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <TextView style="@style/receipt_value.service" android:text="@{service.name}" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_key" android:text="@string/receipt_payment" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:src="@drawable/logo_card" android:layout_gravity="center" android:layout_marginRight="15dp"/>
                            <TextView style="@style/receipt_value" android:text="**** 9876" />
                        </LinearLayout>

                        <TextView style="@style/receipt_titles" android:text="@string/receipt_nav_title"  android:layout_marginTop="13dp"
                            android:layout_marginBottom="16dp" />

                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_key" android:text="@string/comission" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <TextView style="@style/receipt_value" android:text='@{"$"+String.format("%.2f", service.getFee()*.2)}' />
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal" android:paddingVertical="16dp">
                            <TextView style="@style/receipt_total" android:text="@string/total" />
                            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" />
                            <TextView style="@style/receipt_total" android:text='@{"$"+String.format("%.2f", service.getFee()+service.getFee()*.2)}' />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>