<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp" android:layout_marginTop="25dp" android:translationZ="1dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent"
        app:navigationIcon="@drawable/icon_arrow"  >

        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:src="@drawable/hugomed" android:layout_marginRight="20dp" android:layout_gravity="center"
            app:tint="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout android:id="@+id/publisher" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@android:color/holo_orange_dark">
    </RelativeLayout>

    <Button style="@style/green_button_large" android:text="@string/settings_iniciar" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="74dp" android:id="@+id/iniciar" android:onClick="startCall"/>

    <TextView style="@style/app_main_desc" android:text="@string/settings_subtitle" android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iniciar" android:id="@+id/settings_sub" android:layout_marginBottom="23dp" />

    <TextView style="@style/app_main_title" android:text="@string/settings_title" android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settings_sub" android:layout_marginBottom="8dp" android:id="@+id/settings_title"
        />

    <LinearLayout android:orientation="horizontal" style="@style/BaseAppTheme"
        app:layout_constraintBottom_toTopOf="@id/settings_title" android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <ImageButton style="@style/BaseAppTheme" android:id="@+id/audio" android:background="@drawable/audio" android:onClick="toggleAudio"/>
        <View style="@style/BaseAppTheme" android:layout_width="10dp" android:layout_height="1dp" />
        <ImageButton style="@style/BaseAppTheme" android:id="@+id/video" android:background="@drawable/video" android:onClick="toggleVideo"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>