<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.apps.client.juan.hugomed.R" />
        <import type="android.view.View" />
        <variable name="doctor" type="com.apps.client.juan.hugomed.data.entities.Doctor" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView style="@style/short_popover_Image" android:layout_alignParentLeft="true"
            android:layout_marginBottom="-46dp" android:id="@+id/photo" android:translationZ="2dp"
            android:layout_above="@id/popover" android:layout_marginHorizontal="26dp"
            android:visibility="@{doctor.isAvailable ? View.VISIBLE : View.GONE}">
            <ImageView style="@style/short_popover_Image" android:src="@{doctor.picture}" android:scaleType="center" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/short_popover_Image" android:layout_alignParentLeft="true"
            android:layout_marginBottom="-46dp" android:id="@+id/photo2" android:translationZ="2dp"
            android:layout_above="@id/popover2" android:layout_marginHorizontal="26dp"
            android:visibility="@{doctor.isAvailable ? View.GONE : View.VISIBLE}">
            <ImageView style="@style/short_popover_Image" android:src="@{doctor.picture}" android:scaleType="center" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/short_popover_available"
            android:layout_width="match_parent"  android:layout_height="wrap_content" android:clipChildren="false"
            android:layout_alignParentBottom="true" android:id="@+id/popover" android:layout_marginBottom="-18dp"
            android:clipToPadding="false" android:visibility="@{doctor.isAvailable ? View.VISIBLE : View.GONE}">

            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                android:orientation="horizontal" android:paddingBottom="51dp" android:clipChildren="false"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView style="@style/short_popover_Image" android:layout_alignParentLeft="true"
                    android:layout_marginTop="-8dp" android:translationZ="2dp"
                    android:layout_above="@id/popover" android:layout_marginHorizontal="26dp">
                    <ImageView style="@style/short_popover_Image" android:src="@{doctor.picture}" android:scaleType="center" />
                </androidx.cardview.widget.CardView>

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView style="@style/short_popover_available_title" android:text="@string/consulta_en" android:layout_gravity="left"
                        android:layout_marginTop="15dp"/>
                    <TextView style="@style/short_popover_available_subtitle" android:text="@{doctor.name}" android:layout_gravity="left"
                        />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Button style="@style/app_arrow_button_entrar" android:layout_gravity="right"  android:onClick="enterConsultation"
                    android:layout_marginRight="18dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/short_popover_unavailable" android:id="@+id/popover2"
            android:layout_width="match_parent"  android:layout_height="wrap_content" android:clipChildren="false"
            android:layout_alignParentBottom="true" android:layout_marginBottom="-18dp"
            android:clipToPadding="false" android:visibility="@{doctor.isAvailable ? View.GONE : View.VISIBLE}">

            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                android:orientation="horizontal" android:paddingBottom="51dp" android:clipChildren="false"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView style="@style/short_popover_Image" android:layout_alignParentLeft="true"
                    android:layout_marginTop="-8dp" android:translationZ="2dp"
                    android:layout_above="@id/popover" android:layout_marginHorizontal="26dp">
                    <ImageView style="@style/short_popover_Image" android:src="@{doctor.picture}" android:scaleType="center" />
                </androidx.cardview.widget.CardView>

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView style="@style/short_popover_unavailable_title" android:text="@string/consulta_solicitada" android:layout_gravity="left"
                        android:layout_marginTop="15dp"/>
                    <TextView style="@style/short_popover_unavailable_subtitle" android:text="@{doctor.name}" android:layout_gravity="left"
                        />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <TextView style="@style/short_popover_unavailable_text" android:text="@string/notify_when_ready"
                    android:layout_marginTop="15dp" android:layout_marginRight="18dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>